themes/knives-forks-theme/sass/_information-blurbs.scss
.copy-title {
  font-weight: $font_weight_header;
  font-size: 1.75rem;
  @include desktop {
    font-size: 2.5rem;
  }
}
.copy-subtitle {
  color: $primary_green_light;
  font-size: 1.25rem;
  font-weight: 500;
}
.copy-text {
  font-weight: $parafont;
  line-height: 1rem;
  text-align: unset;
  @include desktop {
    line-height: 1.12rem;
  }
}

.blurb-container {
  @include desktop {
    border-bottom: 2px solid #e0dbdb;
    padding: $padding * 2 0 0;
    // border-bottom: 2px solid #e0dbdb;
    width: 95%;
    margin: 0 auto;

    // margin-left: -10%;
    // margin-right: -5%;
  }
}

.page-our-story {
  .custom-copy-block {
    &::before {
      display: none;
    }
  }
  .site-content div {
    &:nth-child(2) {
      order: 3;
    }
  }
  .blurb-container {
    margin: 0 auto;
    border-bottom: transparent;
    @include desktop {
      width: 95%;
    }
  }
}

.custom-copy-block {
  &::before {
    content: '';
    height: 10px;
    width: 90%;
    margin: auto;
    transform: translateY(-80px);
    border-top: 2px solid #e0dbdb;
    @include tablet {
    }
    @include desktop {
      display: none;
    }
  }
  display: flex;
  flex-direction: column;
  margin-top: 60px;
  width: 90%;
  margin: 60px auto 100px auto;
  @include tablet {
    width: 87%;
  }
  @include desktop {
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 15%;
    width: 100%;
    margin-right: 0;
    align-self: flex-end;
  }

  .copy-block-content {
    order: 1;
    position: relative;
    top: -50px;

    @include desktop {
      width: 100%;
      position: relative;
      padding-right: 50px;
      margin: auto 5%;
      top: 0;
    }
    .copy-block-text {
      @include desktop {
        position: relative;
        top: -60px;
        width: 100%;
      }
      .copy-title {
        @include desktop {
          position: relative;
        }
      }

      .copy-text {
        @include desktop {
          position: relative;
          top: 25px;
        }
      }
    }
    .copy-block-btn {
      display: block;
      position: relative;
      bottom: -75px;
      width: 180px;
      margin: auto;
      text-align: center;
      padding: 15px 0;
      letter-spacing: 0.1px;

      @include tablet {
        bottom: -80px;
      }
      @include desktop {
        bottom: -25px;
        position: absolute;
      }
    }
  }
  .copy-block-image {
    order: 0;
    width: 70%;
    position: relative;
    top: -50px;
    @include desktop {
      margin: 0px 1rem;
      padding: 0px;
      top: 75px;
      width: 100%;
    }
    img {
      width: 100%;
      @include desktop {
        position: relative;
        width: 90%;
      }
    }
  }
  &.image-copy {
    padding-right: 5%;
    margin-top: 150px;
    margin-left: 30px;
    &::before {
      transform: translateY(-60px);
      @include tablet {
        margin-left: 12%;
      }
    }
    @include tablet {
      margin-top: 60px;
    }
    @include desktop {
      margin-left: 0;
      margin-top: 60px;
    }
    .copy-block-image {
      left: -70px;
      @include tablet {
        left: -100px;
      }
      @include desktop {
        left: 50px;
      }
    }
    .copy-block-content {
      margin: 0 5% 10px 20%;
      @include desktop {
        margin: 0;
        margin-left: 20px;
      }
    }
  }
  &.copy-image {
    padding-left: 5%;
    margin-right: 30px;
    &::before {
      transform: translateY(-80px);
      @include tablet {
        margin-left: 7%;
      }
    }
    @include tablet {
      margin-right: 60px;
    }
    @include desktop {
      margin-right: 0;
    }
    .copy-block-image {
      order: 0;
      right: -27%;
      @include tablet {
        right: -33%;
      }
      @include desktop {
        order: 1;
        right: 0;
      }
    }
    .copy-block-content {
      margin: 0 20% 10px 5%;
      padding-left: 5%;
      order: 1;
      @include desktop {
        order: 0;
        margin: 0;
        margin-left: 20px;
      }
    }
  }
}
.front-page {
  .image-copy {
    border-bottom: 1px solid grey;
  }
}

